defaultallow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector:
  ingress:
  - from:
    - podSelector: {}
    - namespaceSelector: {}
